@startuml

interface PayerService{
PayApplyVO payApply(Long oid,Long money,String title);
void refund(Long payId,Long money);
void paySure(Long applyId,String outerPid,String outerPuser,Long payMoney);
PayApplyVO selApply(Long applyId);
}

abstract class PayerServiceAble{
Long payedLeft(Long payId);
}

class WxPayerServiceImpl{

}

class AliPayerServiceImpl{

}

class XzPayerServiceImpl{

}
PayerService <|-- PayerServiceAble
PayerServiceAble <|-- WxPayerServiceImpl
PayerServiceAble <|-- AliPayerServiceImpl
PayerServiceAble <|-- XzPayerServiceImpl

@enduml